<resources>
    <string name="app_name">DBDPerks</string>
    <string name="player">CHARACTERS</string>
    <string name="perks">PERKS</string>
    <string name="builds">BUILDS</string>
    <string name="survivors">Survivors</string>
    <string name="killers">Killers</string>
    <string name="loading">Loading...</string>
    <string name="loading_break">Not long now</string>
    <string name="Difficulty">Difficulty:</string>
    <string name="text">TEXTO</string>
    <string name="add">ADD to Build</string>
    <string name="perkadded">Perk added to build</string>
    <string name="buildfull">This Build is full</string>
    <string name="title">Title</string>
    <string name="info">What this does</string>
    <string name="create">Create</string>
    <string name="newbuild">New Build</string>
</resources>