<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBuildActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/title"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/perk1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/perkbackground"
                    android:padding="5dp"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <ImageView
                    android:id="@+id/perk2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/perkbackground"
                    android:padding="5dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/perk3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/perkbackground"
                    android:padding="5dp"
                    tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />

                <ImageView
                    android:id="@+id/perk4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/perkbackground"
                    android:padding="5dp"
                    tools:ignore="ContentDescription" />


            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/info"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/button_sendBuild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>